# meteaudata

./: +flow-log.yaml  .gitignore  .plan.md  CHANGELOG.md  LICENSE  Makefile  PARENT_REFS_PLAN.md  README  README.md  STORAGE_ABSTRACTION_DESIGN.md  Untitled Diagram.drawio  class_diagram.drawio  comparison.ipynb  config.yaml  covid_tests.py  demo_dependency_graph.py  filter.ipynb  mkdocs.yml  next_steps.md  pyproject.toml  scratch.ipynb
.github/workflows/: docs.yml  publish.yml  test-publish.yml
docs/: index.md
docs/api-reference/: display.md  index.md
docs/development/: contributing.md  executable-code-docs.md  extending.md
docs/examples/: basic-workflow.md  basic-workflow_template.md
docs/getting-started/: basic-concepts.md  basic-concepts_template.md  installation.md  quickstart.md  quickstart_template.md
docs/metadata-dictionary/: data-provenance.md  dataset.md  function-info.md  index-metadata.md  index.md  parameters.md  processing-step.md  processing-type.md  signal.md  time-series.md
docs/scripts/: copy_assets.py  exec_processor.py  gen_metadata_dict.py  gen_visualization_api.py  process_templates.py
docs/snippets/: _README.md  setup_dataset.py  setup_processing.py  setup_simple_signal.py
docs/user-guide/: backend-storage.md  datasets.md  datasets_template.md  metadata-visualization.md  metadata-visualization_template.md  processing-steps.md  processing-steps_template.md  saving-loading.md  saving-loading_template.md  signals.md  signals_template.md  time-series.md  time-series_template.md  visualization.md  visualization_template.md
snippets/: all_together_dataset.py  create_dataset.py  create_signal.py
src/data_filters/: config.py  exceptions.py  filter_algorithms.py  (+13 more)
tests/: config.yaml  conftest.py  test_backend_integration.py  test_config.py  test_data.csv  test_display_functionality.py  test_ewma1.py  test_ewma3.py  test_export_customization.py  test_filter_results.csv  test_filters.py  test_graph_display.py  test_index_metadata.py  test_kernels.py  test_metEAUdata.py  test_models.py  test_multiline_headers.py  test_normalize_index.py  test_plots.py  test_serialization.py  test_smooth_results.csv  test_snippets.py  test_storage_adapters.py  test_univariate_quality_filters.py  test_utilities.py
yaml_files/: input-metadata.yaml
(+71 files in other folders)
