[tool.poetry]
name = "meteaudata-py"
version = "0.1.0"
description = "A lightweight package for tracking metadata about time series to create repeatable data pipelines."
authors = ["Jean-David Therrien <jeandavidt@gmail.com>"]
license = "CC-BY4"
readme = "README.md"
packages = [{include = "meteaudata"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "\">=1.9.0\""
pandas = "\">=1.4.2\""
PyYAML = "\">=6.0\""

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
