[tool.poetry]
name = "meteaudata"
version = "0.3.0"
description = "A lightweight package for tracking metadata about time series to create repeatable data pipelines."
authors = ["Jean-David Therrien <jeandavidt@gmail.com>"]
license = "CC-BY4"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.4"
ipython = "^8.2"
pyyaml = "^6.0.1"
pydantic = "^2.0"
plotly = "^5.21.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
types-PyYAML = "^6.0.12.20240311"
black = "^24.3.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
