[project]
name = "meteaudata"
version = "0.7.13"
description = "A lightweight package for tracking metadata about time series to create repeatable data pipelines."
authors = [
    {name = "Jean-David Therrien", email = "jeandavidt@gmail.com"}
]
license = {text = "CC-BY4"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.4",
    "ipython>=8.2.0,<9.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "pydantic>=2.0,<3.0",
    "plotly>=5.21.0,<6.0.0",
    "networkx>=3.2.1",
    "ipywidgets>=8.1.7",
]

[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meteaudata"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0,<2.0.0",
    "flake8>=7.0.0,<8.0.0",
    "pytest>=8.1.1,<9.0.0",
    "types-PyYAML>=6.0.12.20240311",
    "black>=24.3.0,<25.0.0",
    "pre-commit>=3.6.2,<4.0.0"
]

